[project]
name = "comfyui-splat-loader"
description = "In-node Gaussian splat viewport (Spark) for ComfyUI with WYSIWYG image capture."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/brayevalerien/comfyui-splat-loader"

[tool.comfy]
PublisherId = "val"
DisplayName = "Splat Loader"
includes = ["web"]
